fixed wrong width in avatar in room list

--- a/public/less/components/menu/room/avatar.less
+++ b/public/less/components/menu/room/avatar.less
@@ -5,7 +5,7 @@
 
   .desktop & {
     height:       2.2rem;
-    max-width:    2.2rem;
+    width:        2.2rem;
     margin-right: 1rem;
   }
 
